--- a/src/styles/_conoce-mas.scss
+++ b/src/styles/_conoce-mas.scss
@@ -1,8 +1,28 @@
 .conoce-mas {
 
+    margin: 60px 0;
+
     .container {
 
-        text-align: center;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+
+        .info-texto {
+
+            text-align: center;
+
+        }
+
+        .infobox {
+
+            .icono {
+                padding: 10px 0;
+                text-align: center;
+
+            }
+
+        }
 
     }
 
