--- a/src/styles/_conoce-mas.scss
+++ b/src/styles/_conoce-mas.scss
@@ -1,4 +1,6 @@
-.conoce-mas {
+// $btnColor: #55FF55;
+
+.info-row {
 
     margin: 60px 0;
 
@@ -21,6 +23,12 @@
                 text-align: center;
 
             }
+
+        }
+        
+        .btn-primary {
+
+            // background-color: $btnColor;
 
         }
 
