--- a/src/styles/_login.scss
+++ b/src/styles/_login.scss
@@ -69,15 +69,15 @@ form {
 // }
 
 /* Avatar image */
-img {
-    width: 60%;
-    display: block;
-    margin: auto;
-    &.avatar {
-        border-radius: 50%;
-    }
+// img {
+//     width: 60%;
+//     display: block;
+//     margin: auto;
+//     &.avatar {
+//         border-radius: 50%;
+//     }
 
-}
+// }
 
 /* Add padding to containers */
 // .container {
