--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,10 +1,23 @@
-// div.container {
+#app { 
+    > div {
+        > div {
+            >.container-fluid {
+                padding-top: 63px;
+            }
+        }
+    }
+}
 
-//     margin: auto;
-//     padding-top: 50px;
+@media screen and (min-width: 768px) and (max-width: 840px) {
 
-// }
+    #app { 
+        > div {
+            > div {
+                >.container-fluid {
+                    padding-top: 113px;
+                }
+            }
+        }
+    }
 
-#app>div>div>.container-fluid {
-    padding-top: 63px;
 }
