Agregando padding-bottom al fondo

--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -3,6 +3,7 @@
         > div {
             >.container-fluid {
                 padding-top: 63px;
+                padding-bottom: 72px;
             }
         }
     }
