--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -9,6 +9,21 @@
     }
 }
 
+.likes {
+    position: absolute;
+    right: 1.5em;
+    top: 0.5em;
+}
+
+
+@media screen and (min-width: 1375px) {
+
+    .likes {
+        right: 5em;
+    }
+
+}
+
 @media screen and (min-width: 768px) and (max-width: 840px) {
 
     #app { 
