--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -18,16 +18,16 @@
 
     }
 
-    .container {
+    // .container {
 
-        display: flex;
-        justify-content: center;
-        align-items: center;
-
-        
+    //     display: flex;
+    //     justify-content: center;
+    //     align-items: center;
 
         
 
-    }
+        
+
+    // }
 
 }
