--- a/src/styles/_body.scss
+++ b/src/styles/_body.scss
@@ -1,3 +1,9 @@
+body {
+
+    font-family: 'Titillium Web', sans-serif;
+
+}
+
 #app { 
     > div {
         > div {
@@ -14,7 +20,6 @@
     right: 1.5em;
     top: 0.5em;
 }
-
 
 @media screen and (min-width: 1375px) {
 
