--- a/src/styles/_conoce-mas.scss
+++ b/src/styles/_conoce-mas.scss
@@ -3,6 +3,8 @@
 .info-row {
 
     margin: 60px 0;
+    // background-color: #FFF;
+    // width: 100%;
 
     .info-texto {
         text-align: center;
@@ -14,6 +16,15 @@
         text-align: center;
     }
 
+    .infobox {
+
+        .icono {
+            padding: 10px 0;
+            text-align: center;
+
+        }
+
+    }
 
 
     // .container {
