--- a/src/styles/_info.scss
+++ b/src/styles/_info.scss
@@ -1,34 +1,34 @@
-.info {
+// .info {
     
-    margin: 60px 0;
+//     margin: 60px 0;
 
-    .info-texto {
+//     .info-texto {
 
-        text-align: center;
+//         text-align: center;
 
-    }
+//     }
 
-    .infobox {
+//     .infobox {
 
-        .icono {
-            padding: 10px 0;
-            text-align: center;
-            color: $red;
+//         .icono {
+//             padding: 10px 0;
+//             text-align: center;
+//             color: $red;
 
-        }
+//         }
 
-    }
+//     }
 
-    // .container {
+//     // .container {
 
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-
-        
+//     //     display: flex;
+//     //     justify-content: center;
+//     //     align-items: center;
 
         
 
-    // }
+        
 
-}
+//     // }
+
+// }
