--- a/src/styles/_conoce-mas.scss
+++ b/src/styles/_conoce-mas.scss
@@ -1,64 +1,26 @@
-// $btnColor: #55FF55;
-$tamanioParrafo : 15px;
+$tamanioParrafo : 16px;
 
 .info-row {
 
     margin: 60px 0;
-    // background-color: #FFF;
-    // width: 100%;
 
     .info-texto {
+        
         text-align: center;
+        
         p {
             font-size: $tamanioParrafo;
         }
     }
-    
-    .boton {
-        display: block;
-        margin: auto;
-        text-align: center;
-    }
 
     .infobox {
-
+        
         .icono {
             padding: 10px 0;
             text-align: center;
-
+            color: $red;
         }
 
     }
-
-
-    // .container {
-
-    //     display: flex;
-    //     justify-content: center;
-    //     align-items: center;
-
-    //     .info-texto {
-
-    //         text-align: center;
-
-    //     }
-
-    //     .infobox {
-
-    //         .icono {
-    //             padding: 10px 0;
-    //             text-align: center;
-
-    //         }
-
-    //     }
-        
-    //     .btn-primary {
-
-    //         // background-color: $btnColor;
-
-    //     }
-
-    // }
 
 }
